--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id = "task-form-section">
             <form id = "task-form">
                 <input type = "text" id = "task-title" placeholder="task-title"required/>
-                <input type = "text" id = "task-subject" placeholder="sjahfasd"required/>
+                <input type = "text" id = "task-subject" placeholder="class"required/>
                 <input type = "date" id = "task-date" required/>
                 <button type = "submit">add task</button>
             </form>
