added some buttons

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <input type = "date" id = "task-date" required/>
                 <button type = "submit">add task</button>
             </form>
+            <div class = "import-export">
+                <button id = "export">save task</button>
+                <input type = "file" id = "import-file" accept = ".json"/>
+            </div>
         </section>
     
         <section id = "section-table">
