--- a/Desktop app/index.html
+++ b/Desktop app/index.html
@@ -28,10 +28,10 @@
                 <input type = "date" id = "task-date" required/>
                 <button type = "submit">add task</button>
             </form>
-            <div class = "import-export">
+            <!-- <div class = "import-export">
                 <button id = "export">save task</button>
                 <input type = "file" id = "import-file" accept = ".json"/>
-            </div>
+            </div> -->
         </section>
     
         <section id = "section-table">
