--- a/Desktop app/index.html
+++ b/Desktop app/index.html
@@ -7,7 +7,7 @@
     <meta charset = "UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>
-        Title_holder
+        School-Tracking-App
     </title>
     <link rel = "stylesheet" href = "styles.css"/>
 </head>
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h1>
-            school tracker
+            School Tracking App
         
         
         </h1>
@@ -23,8 +23,8 @@
 
         <section id = "task-form-section">
             <form id = "task-form">
-                <input type = "text" id = "task-title" placeholder="task-title"required/>
-                <input type = "text" id = "task-subject" placeholder="class"required/>
+                <input type = "text" id = "task-title" placeholder="Task--Title"required/>
+                <input type = "text" id = "task-subject" placeholder="Class"required/>
                 <input type = "date" id = "task-date" required/>
                 <button type = "submit">add task</button>
             </form>
