Finsished, need style (2.0)

--- a/Desktop app/index.html
+++ b/Desktop app/index.html
@@ -87,6 +87,16 @@
             </div>
         </div>
 
+        <div id = "subject-modal" class="modal hidden">
+            <div class = "modal-content">
+                <h2>Add Subject</h2>
+                <input type = "text" id = "subject-input" placeholder="Subject name"/>
+                <div class="modal-buttons">
+                    <button id="save-subject">Add</button>
+                    <button id="cancel-subject">Cancel</button>
+                </div>
+            </div>
+        </div>
 
     <script src = "app.js"></script>
 </body>
