made some style changes

--- a/Desktop app/index.html
+++ b/Desktop app/index.html
@@ -29,9 +29,9 @@
                 Your subjects
             </h2>
             <div id = "subjects-grid"></div>
-            <button id = "add-subject">
+            <!-- <button id = "add-subject">
                 add subject
-            </button>
+            </button> -->
         </section>
 
 
