--- a/Desktop app/index.html
+++ b/Desktop app/index.html
@@ -22,7 +22,9 @@
     </header>
 
 
-
+        <button id = "darkmode" style="position: absolute; top:20px; right:20px;">
+            darkmode
+        </button>
 
         <section id = "subjects-view">
             <h2>
@@ -37,7 +39,7 @@
 
         <section id = "task-form-section">
 
-            <button id = "back-button" class = "hidden">
+            <button id = "back-button" class = "hidden" style="position: absolute; bottom:20px; left:20px;">
             Go back
             </button>
             <form id = "task-form">
